# OmniView

./: .gitignore  README.md  pyproject.toml
examples/: agent_reporter.py  client.toml  host.toml  hub.toml
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts  launcherClient.ts
frontend/src/components/: ClientCard.tsx  ClientDetail.tsx  HubAccess.tsx  LauncherStatus.tsx  NodeCard.tsx  NodeDetail.tsx  StatusBadge.tsx  SummaryStrip.tsx
frontend/src/hooks/: useDashboard.ts  useHubSession.ts  useLauncher.ts
frontend/src/lib/: format.ts  safety.ts
src/omniview/: __init__.py  cli.py  client_telemetry.py  config.py  host_agent.py  installers.py  main.py  models.py  paths.py  role_config.py  security.py  service_manager.py  store.py  telemetry.py
src/omniview/api/: deps.py
src/omniview/api/routes/: auth.py  clients.py  health.py  nodes.py
src/omniview/frontend_assets/: index.html
src/omniview/frontend_assets/assets/: index-BEsGGJtH.js  index-Bb43vJjc.css  index-RtnykNkN.js  index-gUPcPq3c.js  index-q9leN-wY.css
src/omniview/launcher/: __init__.py  app.py  config.py  models.py  service.py
src/omniview/services/: demo_seed.py  dispatch.py
tests/: test_api.py  test_cli.py  test_launcher.py
